static/style.css
/* 
COLOR PALETTE
Smoky black - #14110F
Jet - #34312D
Gray - #7E7F83
Dun - #D9C5B2
Anti-flash White - #F3F3F4
*/

:root{
--bg-color: #F3F3F4;
}

body{
  background-color:#DEE2E6;
  width: 100%;
  height: 100%;
}

h1{
  color: #14110F;
  font-family: 'Courier New', Courier, monospace;
  font-weight: 900;
  text-align: center;
}

h3{
  text-align: center;
}

.tooltiptext {
  visibility: hidden;
  z-index:1;
  font-size: 100px;;
}

.tooltiptext:hover{
  visibility: visible;
  background-color: #f5f5f5
}

/* li{
  list-style-type: none;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: rgb(143, 145, 222);
  border-radius: 10%;
  width: fit-content;
  margin: 2vh;
  width:80%;
  padding-bottom: 20px;
  margin-bottom: 2px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  font-size: small;
} */

#navButton{
  border-radius: 8px;
  width: auto;
  height: 5vh;
  border: 10px;
  font-family: 'Courier New', Courier, monospace;
  font-weight: 900;
  font-size: 10px;
  cursor: pointer;
  transition-duration: 0.5s;
  margin-right: 10px;
}


#navButton:hover{
  background-color: rgb(51, 82, 255);
}

/*Only for Login.html*/
#login{
  background-color: burlywood;
  justify-content: center;
  margin-left: 25%;
  margin-right: 25%;
  margin-bottom: auto;
  margin-top: 20%;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 40px;
  position: relative;
}

/* #navbar{ 
  background-color: #dee2e6;
  position: fixed;
  height: 10%;
  text-align: center;
  z-index: 0;
  width: 100%;
  display: flex;  
  overflow: hidden;
  padding-top: 10px;
} */

/* #navbar nav{
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
} */

/* #navbar ul{
  display: flex;
  flex-direction: row;
  left: 0%;
  list-style-type: none;
  width: 100%;
  padding: 0;
} */

#title h1{
  color: #14110F;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, serif;
  margin: auto;
  font-size: 20px;
}

#loginName{
  background-color: #e9ecef;
  padding: 1px;
  text-align: center;
  z-index: 0;
  border-radius: 10px;
  word-wrap: break-word;
  font-weight: bold;
  font-size: 10px;
  width: 10%;
}

/*Dashboard*/
#dashboard{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  position: absolute;
  height: auto;
  margin: auto;
  border-radius: 20px;
}

#subjectName{
  margin: 10%;
  height: 40%;
  text-align: center;
  border-radius: 10px;
  display:flex;
  flex-direction: column;
  overflow-x: hidden;
}

#subjectName button{
  /* margin-top: 5%;
  margin-bottom: 5%; */
  background-color: #616161;
  height: 20vh;
  width: 30vw;
  border-radius: 10px;
  border: none;
  transition-duration: 0.5s;
  color-scheme: dark;
}

#subjectName button:hover{
  background-color: rgb(206, 206, 206);
  color-scheme: light;
}

#contentBackground {
  justify-content: center ;
  background-color: #F3F3F4;
  border-radius: 5%;
  margin: 5vh auto;
  width: 90vw;
  height: 100vh;
  padding-top: 4vh;
  position: relative;
  overflow-x: hidden;
}

#contentBackground h2{
  margin-left: 3%;
}

/*
TODO: ADD DESIGN TO THE FORMS
*/
#peerReviewForm{ 
  padding:1px;
  text-align: left;
  border-radius: 10px;
  justify-content: center;
  width: 100%;
  height: auto;
  margin-left: 3%;
}

#peerReviewForm h2{
  text-align: right;
  margin-left: 1%;
}

#contentBackground h2{
  text-align: left;
  margin-top: 0%;
} 

/* #groupingTable{
  background-color: rgb(163, 163, 163);
  padding:1px;
  text-align: center;
  border-radius: 10px;
  justify-content: center;
  width: 100%;
  height: 100%;

}

#groupingHeader{
  background-color: #ADB5BD;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 30px;
}

#groupingButton{
  font-size: 10px;
  right: 0%;
}

#groupingTable td{
  display: visible;
  background-color: #CED4DA;
}
*/

#groupingHeader{
  background-color: #ADB5BD;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 30px;
  display: flex;
  height: 100%;
}

#groupingHeader button{
  background-color: #ADB5BD;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 30px;
  display: flex;
  height: 100%;
  border: none;
}

#exportGroupingbtn button{
  background-color: white;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 10px;
  display: flex;
  height: 100%;
  border: none;
}

#groupingTitle{
padding-left: 5%;
margin-right: 70%;
font-weight: bold;
}

#groupingSection div{
  display:visible;/*Hides the grouping*/
  font-size: 20px;
  text-align: left;
  background-color: #DEE2E6;
  border:10px, solid, black;
}

.grouping{
  border: 1px solid #14110F ;
}

#changePassword{
  padding:1px;
  text-align: center;
  border-radius: 10px;
  justify-content: center;
  width: 90%;
  height: 90%;
}

/*Only for addClassButton*/
#addClassInput{
  display: none;
}

.addClassBtn{
  display: flex;
  background-color: rgb(163, 163, 163);
  padding:1px;
  text-align: center;
  border-radius: 5px;
  justify-content: center;
  align-items: center;
  margin-left:10vh;
  transition-duration: 0.3;
}

.addClassBtn :hover{
  cursor: pointer;
}

#addingCourses{
  margin-left: 3%;
}

#addCoursesbtn{
  background-color: #dee2e6;
  border: 2px solid #4f4f4f;
  border-radius: 10px;
}

/* Size for brand */
nav .navbar-brand
{
    font-size: xx-large;
}

/* Colors for brand */
nav .navbar-brand .blue
{
    color: #537fbe;
}
nav .navbar-brand .red
{
    color: #ea433b;
}
nav .navbar-brand .yellow
{
    color: #f5b82e;
}
nav .navbar-brand .green
{
    color: #2e944b;
}

.container {
        margin-left: 3;
        text-align: left;
        width: 50%;
}

.section {
    padding-bottom: 0rem;
    padding-top: 0rem;
}

.section:hover {
    background-color: #f5f5f5;
    transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
}

.button-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    position: relative; /* Add position: relative to the container */
}

.interface {
  position: absolute;
  top: calc(100% + 0px); /* Adjust the top position to create a gap */
  left: 0;
  padding: 10px;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  z-index: 1;
  width: 100%;
}
.headblue{
  position: absolute;
  top: calc(100% - 1px); /* Adjust the top position to create a gap */
  left: 0;
  display: none;
  padding: 10px;
  background-color: #5D87A8;
  z-index: 1;
  width: 100%;
}
.headgreen{
  position: absolute;
  top: calc(100% - 1px); /* Adjust the top position to create a gap */
  left: 0;
  display: none;
  padding: 10px;
  background-color: #65D786;
  z-index: 1;
  width: 100%;
}
.headred{
  position: absolute;
  top: calc(100% - 1px); /* Adjust the top position to create a gap */
  left: 0;
  display: none;
  padding: 10px;
  background-color: #DB0000;
  z-index: 1;
  width: 100%;
}


body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.backgroundgray{
  padding: 10px;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  z-index: 1;
}

.backgrounddarker{
  padding: 10px;
  background-color: #808080;
  border: 1px solid #ccc;
  z-index: 1;
}

@keyframes color-cycle {
  0% { color: red;}
  33% { color: rgb(1, 255, 39);}
  66% { color: rebeccapurple; }
  100% { color: red;}
}

